# webApp/docs/swagger.json
@@ -18,7 +18,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/minecraft.ServerInfo"
+                            "$ref": "#/definitions/v1.ServerInfo"
                         }
                     }
                 }
@@ -187,17 +187,6 @@
         }
     },
     "definitions": {
-        "minecraft.ServerInfo": {
-            "type": "object",
-            "properties": {
-                "type": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "string"
-                }
-            }
-        },
         "minecraft.VersionSelectionRequest": {
             "type": "object",
             "required": [
@@ -212,6 +201,14 @@
                 "core_type": {
                     "type": "string"
                 },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.ServerInfo": {
+            "type": "object",
+            "properties": {
                 "version": {
                     "type": "string"
                 }
